--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '3'
 services:
-  frontend:
-    build: ../front
-    ports:
-      - "7000:7000"
-
   backend:
-    build: ./back
+    build: backend
+    image: backend
+    restart: unless-stopped
     ports:
       - 8000:8000
+
+  frontend:
+    build: frontend/ponderada
+    image: frontend
+    restart: unless-stopped
+    ports:
+      - 7000:7000
+    environment:
+    - REACT_APP_API_BASE_URL=http://localhost:8000
